fix:footer -gap +margin-right

--- a/css/styles.css
+++ b/css/styles.css
@@ -688,8 +688,7 @@ img {
 .footer-container {
   display: flex;
   align-items: baseline;
-  gap: 120px;
-
+  /* gap: 120px; */
 }
 
 .footer-logo {
